--- a/Statis/Statis.csproj
+++ b/Statis/Statis.csproj
@@ -209,6 +209,9 @@
     <None Include="Service References\StatisServices\StatisServices2.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Service References\StatisServices\StatisServices3.xsd">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Assets\Resources\Strings.en-US.resx">
