--- a/StatisServiceTests/StatisServiceTests.csproj
+++ b/StatisServiceTests/StatisServiceTests.csproj
@@ -77,6 +77,9 @@
     <None Include="Service References\StatisService\StatisServices2.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Service References\StatisService\StatisServices3.xsd">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="ClientAccessPolicy.xml">
