--- a/Statis/Statis.csproj
+++ b/Statis/Statis.csproj
@@ -90,6 +90,7 @@
     <Compile Include="ViewModels\AnalystViewModel.cs" />
     <Compile Include="ViewModels\ChoiceViewModel.cs" />
     <Compile Include="ViewModels\CreateQuestionnaireViewModel.cs" />
+    <Compile Include="ViewModels\HomeViewModel.cs" />
     <Compile Include="ViewModels\ImgChoiceQuestionViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\QuestionnaireFillingViewModel.cs" />
